New documentation (readme.md).

--- a/tst/prj/www/index.html
+++ b/tst/prj/www/index.html
@@ -25,7 +25,7 @@
 <script src="dbg/js/wtag.Data.js"></script>
 
 <body>
-<div name="const" id="1" class="wtag-w:Data">
+<div name="const" id="4" class="wtag-w:Data custom">
 <map>
 <item key="sens">
 <list>
@@ -40,17 +40,17 @@
 </map>
 </div>
 <h1>Hello
-<span id="2">yourname</span></h1>
-<input data="yourname" id="3" class="wtag-input"/>
-<a id="4" class="wtag-button">Start!</a>
-<a class="red wtag-button" id="5">Clear</a>
+<span id="5" class="custom">yourname</span></h1>
+<input data="yourname" id="6" class="wtag-input custom"/>
+<a id="7" class="wtag-button custom">Start!</a>
+<a class="red wtag-button custom" id="8">Clear</a>
 <fieldset>
 <legend>Users</legend>
-<ul tag="ul" id="8" class="wtag-list"><li id="9" style="display:none"><span id="6">user</span>
+<ul tag="ul" id="11" class="wtag-list custom"><li id="12" style="display:none"><span id="9" class="custom">user</span>
 is a friend of
-<span id="7">yourname</span></li></ul>
+<span id="10" class="custom">yourname</span></li></ul>
 </fieldset>
-<div id="11" class="wtag-popup"><div name="hello" class="msg">Hello dear
-<span id="10">yourname</span></div></div>
-<div id="12" style="position:absolute;display:block;left:0;top:0;right:0;bottom:0;background:#000;"></div></body>
+<div id="14" class="wtag-popup custom"><div name="hello" class="msg">Hello dear
+<span id="13" class="custom">yourname</span></div></div>
+<div id="15" style="position:absolute;display:block;left:0;top:0;right:0;bottom:0;background:#000;"></div></body>
 </html>
