--- a/tst/prj/src/index.html
+++ b/tst/prj/src/index.html
@@ -1,22 +1,18 @@
 <w:html app="Main">
-	<w:flex class="wide">
-		<w:button>wide BLUE</w:button>
-		<w:button class="red">wide RED</w:button>
-		<w:button class="green">wide GREEN</w:button>
-	</w:flex>
-	<w:flex class="narrow">
-		<w:button>narrow BLUE</w:button>
-		<w:button class="red" style="width: 64px; height: 64px">narrow RED</w:button>
-		<w:button class="green">narrow GREEN</w:button>
-	</w:flex>
-	<w:flex class="column">
-		<w:button>narrow BLUE</w:button>
-		<w:button class="red" style="width: 64px; height: 64px">narrow RED</w:button>
-		<w:button class="green">narrow GREEN</w:button>
-	</w:flex>
-	<w:flex class="row">
-		<w:button>narrow BLUE</w:button>
-		<w:button class="red" style="width: 64px; height: 64px">narrow RED</w:button>
-		<w:button class="green">narrow GREEN</w:button>
+	<w:flex class="wide" style="position: absolute; left: 0; top: 0; width: 100%; height: 100%">
+		<w:text>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor.
+			</p>
+			<p>
+				Pellentesque auctor nisi id magna consequat sagittis. Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.
+			</p>
+		</w:text>
+		<w:flex class="narrow" flex-size="64px">
+			<w:button class="light"><w:img src="img/menu/quetes.png"></w:img></w:button>
+			<w:button class="green">B</w:button>
+			<w:button class="red">C</w:button>
+			<w:button>D</w:button>
+		</w:flex>
 	</w:flex>
 </w:html>
