Added the ability to get images dimensions. Work in progress on widget <w:Img>.

--- a/tst/prj/src/index.html
+++ b/tst/prj/src/index.html
@@ -9,7 +9,9 @@
 			</p>
 		</w:text>
 		<w:flex class="narrow" flex-size="64px">
-			<w:button class="light"><w:img src="img/menu/quetes.png"></w:img></w:button>
+			<w:button class="light"><w:img size="parent" src="img/menu/quetes.png"></w:img></w:button>
+			<w:button class="light"><w:img size="parent" src="img/menu/plan-1.png"></w:img></w:button>
+			<w:button class="light"><w:img size="parent" src="img/menu/plan-2.png"></w:img></w:button>
 			<w:button class="green">B</w:button>
 			<w:button class="red">C</w:button>
 			<w:button>D</w:button>
