Error reporting enhanced.

--- a/tst/prj/src/index.html
+++ b/tst/prj/src/index.html
@@ -9,12 +9,17 @@
 			</p>
 		</w:text>
 		<w:flex class="narrow" flex-size="64px">
+			<w:multiply name="plan-1, quetes, plan-1, plan-2">
+				<w:button class="light">
+					<w:img size="parent" src="img/menu/{{name}}.png"></w:img>
+				</w:button>
+			</w:multiply>
+<!--
 			<w:button class="light"><w:img size="parent" src="img/menu/quetes.png"></w:img></w:button>
 			<w:button class="light"><w:img size="parent" src="img/menu/plan-1.png"></w:img></w:button>
 			<w:button class="light"><w:img size="parent" src="img/menu/plan-2.png"></w:img></w:button>
-			<w:button class="green">B</w:button>
-			<w:button class="red">C</w:button>
 			<w:button>D</w:button>
+-->
 		</w:flex>
 	</w:flex>
 </w:html>
