Widget <w:multiply> tested, but still buggy.

--- a/tst/prj/src/index.html
+++ b/tst/prj/src/index.html
@@ -1,3 +1,16 @@
+<html>
+	<head></head>
+	<body>
+		<ul>
+			<li>Et ensuite...</li>
+			<w:multiply name="plan-1, quetes, plan-1, plan-2">
+				<li>{{name}}</li>
+				<li><w:img size="parent" src="img/menu/{{name}}.png"></w:img></li>
+			</w:multiply>
+		</ul>
+	</body>
+</html>
+<!--
 <w:html app="Main">
 	<w:flex class="wide" style="position: absolute; left: 0; top: 0; width: 100%; height: 100%">
 		<w:text>
@@ -14,12 +27,11 @@
 					<w:img size="parent" src="img/menu/{{name}}.png"></w:img>
 				</w:button>
 			</w:multiply>
-<!--
 			<w:button class="light"><w:img size="parent" src="img/menu/quetes.png"></w:img></w:button>
 			<w:button class="light"><w:img size="parent" src="img/menu/plan-1.png"></w:img></w:button>
 			<w:button class="light"><w:img size="parent" src="img/menu/plan-2.png"></w:img></w:button>
 			<w:button>D</w:button>
--->
 		</w:flex>
 	</w:flex>
 </w:html>
+-->
