--- a/tst/src/index.html
+++ b/tst/src/index.html
@@ -1,22 +1,17 @@
 <x-html title="Test">
-    <x-template id="test.contact">
+    <x-template mod="test.contact" tag="article">
         <fieldset>
             <legend>Contact</legend>
             <dl>
                 <dt>Name:</dt>
                 <dd>
-                    <input type="text">
-                        <x-tpl att="value" var="name" />
-                    </input>
+                    <input type="text" placeholder="Name" property:value="name">
                 </dd>
             </dl>
             <dl>
                 <dt>E-Mail:</dt>
                 <dd>
-                    <input type="text">
-                        <x-tpl att="value" var="email" />
-                        <x-tpl remove-class="invalid" var="email$valid" />
-                    </input>
+                    <input type="text" property:value="email" remove-class:invalid="email_valid">
                 </dd>
             </dl>
         </fieldset>
