Added external dependencies.

--- a/tst/src/index.html
+++ b/tst/src/index.html
@@ -1,5 +1,5 @@
-<x-html title="Test">
-    <x-template mod="test.contact" tag="article">
+<x-html title="Test" app="main">
+    <x--template mod="test.contact" tag="article">
         <fieldset>
             <legend>Contact</legend>
             <dl>
@@ -15,5 +15,5 @@
                 </dd>
             </dl>
         </fieldset>
-    </x-template>
+    </x--template>
 </x-html>
