--- a/tst/src/index.html
+++ b/tst/src/index.html
@@ -1,19 +1,12 @@
 <x-html title="Test" app="main">
-    <x--template mod="test.contact" tag="article">
-        <fieldset>
-            <legend>Contact</legend>
-            <dl>
-                <dt>Name:</dt>
-                <dd>
-                    <input type="text" placeholder="Name" property:value="name">
-                </dd>
-            </dl>
-            <dl>
-                <dt>E-Mail:</dt>
-                <dd>
-                    <input type="text" property:value="email" remove-class:invalid="email_valid">
-                </dd>
-            </dl>
-        </fieldset>
-    </x--template>
+    <x-template mod="test.task-list" tag="article" attribs="todos=[]">
+        <h1>Todo</h1>
+        <ul>
+            <tpl-loop array="$todos" var="$task">
+                <li><tpl-text>$task</tpl-text></li>
+            </tpl-loop>
+        </ul>
+        <input type="text" get:value="$value" set:value="$clear" />
+        <button event:tap="$todos.Push($value); $clear=''">Add #<tpl-text>$todos.length</tpl-text></button>
+    </x-template>
 </x-html>
