More on wdg.button.

--- a/src/wdg.button.js.html
+++ b/src/wdg.button.js.html
@@ -2,13 +2,18 @@
     <wdg-code:wdg.button
              id="btn"
              text="OK / txtText"
+             type="standard / txtType"
              value="button / txtValue"
+             small="true / chkSmall"
              enabled="true / chkEnabled"
              wide="false / chkWide"
              visible="true / chkVisible" />
     <div style="width: 300px; float: left">
         <wdg:text id="txtText" $label="text" $value="OK" $wide="true" />
+        <wdg:text id="txtType" $label="type" $value="standard" $wide="true" />
         <wdg:text id="txtValue" $label="value" $value="button" $wide="true" />
+        <wdg:checkbox id="chkSmall"
+                      $text="small" $value="false" $wide="true" />
         <wdg:checkbox id="chkEnabled"
                       $text="enabled" $value="true" $wide="true" />
         <wdg:checkbox id="chkWide"
