--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,9 @@
 <x-html title="Toloframework">
-    <wdg:checkbox id="chkEnabled" $text="button.enabled" $value="false"/>
-    <wdg:button bind:enabled="chkEnabled:value" $enabled="false"/>
+    <h3>Widgets</h3>
+    <ul>
+        <li><a href="wdg.button.js.html">wdg.button</a></li>
+        <li><a href="wdg.checkbox.js.html">wdg.checkbox</a></li>
+        <li><a href="wdg.label.js.html">wdg.label</a></li>
+        <li><a href="wdg.text.js.html">wdg.text</a></li>
+    </ul>
 </x-html>
