--- a/src/index.html
+++ b/src/index.html
@@ -6,4 +6,10 @@
         <li><a href="wdg.label.js.html">wdg.label</a></li>
         <li><a href="wdg.text.js.html">wdg.text</a></li>
     </ul>
+
+    <wdg:icon $content="Close" />
+    <wdg:icon $content="Close" $size="32px"/>
+    <wdg:icon $content="Close" $size="64px" />
+    <wdg:icon $content="Close" $size="128px" />
+    <wdg:icon $content="Close" $size="256px" />
 </x-html>
