--- a/src/index.html
+++ b/src/index.html
@@ -7,4 +7,8 @@
         <li><a href="wdg.label.js.html">wdg.label</a></li>
         <li><a href="wdg.text.js.html">wdg.text</a></li>
     </ul>
+
+    <wdg:combo $value="fr" $label="Choix de la langue">
+        <content json>{"en": "English", "fr": "French", "it": "Italiano"}</content>
+    </wdg:combo>
 </x-html>
