--- a/src/wdg.button.js.html
+++ b/src/wdg.button.js.html
@@ -2,8 +2,10 @@
     <wdg:text att="text" $label="text" $value="Button" />
     <wdg:text att="type" $label="type" $value="standard"
               $list="standard, primary, warning" />
-    <wdg:text att="icon" $label="icon" $value="ok" $list="gear, ok, cancel, close, menu, back, add"/>
+    <wdg:text att="icon" $label="icon" $value="ok" 
+              $list="gear, ok, cancel, close, menu, back, add"/>
     <wdg:checkbox att="flat" $text="flat" $value="false" />
+    <wdg:checkbox att="iconToLeft" $text="iconToLeft" $value="true" />
     <wdg:checkbox att="wait" $text="wait" $value="false" />
     <wdg:checkbox att="enabled" $text="enabled" $value="true" />
     <wdg:checkbox att="wide" $text="wide" $value="false" />
