--- a/src/wdg.checkbox.js.html
+++ b/src/wdg.checkbox.js.html
@@ -1,12 +1,6 @@
-<x-html title="Module wdg.checkbox">
-    <wdg-code $name="wdg.checkbox"
-             value="true / txtValue"
-             wide="false / chkWide"
-             visible="true / chkVisible">
-        <wdg:text id="txtValue" $label="value" $value="true" $wide="true" />
-        <wdg:checkbox id="chkWide"
-                      $text="wide" $value="false" $wide="true" />
-        <wdg:checkbox id="chkVisible"
-                      $text="visible" $value="true" $wide="true"/>
-    </wdg-code>
-</x-html>
+<wdg.checkbox>
+    <wdg:text att="text" $label="text" $value="Provide feedback to the devil" />
+    <wdg:checkbox att="value" $label="value" $value="true" />
+    <wdg:checkbox att="inverted" $text="inverted" $value="false" />
+    <wdg:checkbox att="wide" $text="wide" $value="false" />
+</wdg.checkbox>
