--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
     <h3>Widgets</h3>
     <ul>
         <li><a href="wdg.button.js.html">wdg.button</a></li>
+        <li><a href="wdg.floating-button.js.html">wdg.floating-button</a></li>
         <li><a href="wdg.checkbox.js.html">wdg.checkbox</a></li>
         <li><a href="wdg.icon.js.html">wdg.icon</a></li>
         <li><a href="wdg.label.js.html">wdg.label</a></li>
