--- a/src/test.html
+++ b/src/test.html
@@ -1,5 +1,5 @@
 <x-html>
-    <div class="thm-bgPL">
-        <wdg:icon $size="128" $content="back" />
-    </div>
+    <x-md>
+Calculez <m>\sum_{0\leq 3k \leq n}{n\chose 3k}</m> en utilisant les racines n-ièmes de l'unité.
+    </x-md>
 </x-html>
