--- a/src/test.html
+++ b/src/test.html
@@ -1,5 +1,7 @@
 <x-html>
     <x-md>
-Calculez <m>\sum_{0\leq 3k \leq n}{n\chose 3k}</m> en utilisant les racines n-ièmes de l'unité.
+Calculez <m>\sum_{0\leq 3k \leq n}{n\choose 3k}</m> en utilisant les racines n-ièmes de l'unité.
+
+Calculez <m>\sum_{0\leq 3k \leq n}{\binom n{3k}}</m> en utilisant les racines n-ièmes de l'unité.
     </x-md>
 </x-html>
