--- a/src/test.html
+++ b/src/test.html
@@ -3,5 +3,7 @@
 Calculez <m>\sum_{0\leq 3k \leq n}{n\choose 3k}</m> en utilisant les racines n-ièmes de l'unité.
 
 Calculez <m>\sum_{0\leq 3k \leq n}{\binom n{3k}}</m> en utilisant les racines n-ièmes de l'unité.
+
+Calculez <mm>\sum_{0\leq 3k \leq n}{\binom n{3k}}</mm> en utilisant les racines n-ièmes de l'unité.
     </x-md>
 </x-html>
