XJS View enhanced, but not finished.

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <x-html title="Toloframework">
+    <h3>XJS</h3>
     <h3>Widgets</h3>
     <ul>
         <li><a href="wdg.button.js.html">wdg.button</a></li>
