--- a/src/test.html
+++ b/src/test.html
@@ -1,9 +1,4 @@
-<x-html>
-    <x-md>
-Calculez <m>\sum_{0\leq 3k \leq n}{n\choose 3k}</m> en utilisant les racines n-ièmes de l'unité.
-
-Calculez <m>\sum_{0\leq 3k \leq n}{\binom n{3k}}</m> en utilisant les racines n-ièmes de l'unité.
-
-Calculez <mm>\sum_{0\leq 3k \leq n}{\binom n{3k}}</mm> en utilisant les racines n-ièmes de l'unité.
-    </x-md>
-</x-html>
+<page>
+    <x-widget name="tfw.view.button" />
+    <x-widget name="tfw.view.button" $flat="true"/>
+</page>
