--- a/src/test.html
+++ b/src/test.html
@@ -1,4 +1,5 @@
 <page>
     <x-widget name="tfw.view.button" />
     <x-widget name="tfw.view.button" $flat="true"/>
+    <x-widget name="tfw.view.checkbox" $content="Hello world!"/>
 </page>
