--- a/src/test.html
+++ b/src/test.html
@@ -1,5 +1,10 @@
 <page>
     <x-widget name="tfw.view.button" />
     <x-widget name="tfw.view.button" $flat="true"/>
+    <x-widget name="tfw.view.button" $type="primary"/>
+    <x-widget name="tfw.view.button" $type="primary" $flat="true"/>
+    <x-widget name="tfw.view.button" $type="secondary"/>
+    <x-widget name="tfw.view.button" $type="secondary" $flat="true"/>
     <x-widget name="tfw.view.checkbox" $content="Hello world!"/>
+    <x-widget name="tfw.view.checkbox" $content="Hello world!" $value="false"/>
 </page>
